# AftertimeBalance_backend

./: .gitignore  Dockerfile  README.md  api_service.py  manage.py  pyproject.toml
config/: settings.py  urls.py
config/settings/: dev.py  dev_databases_template.py  general.py  test.py
core/migrations/: 0001_initial.py  0002_modelships_moment.py
core/models/vehicles/: modelShipLocation.py  modelships.py
core/structures/objects/: obj_ship.py
core/structures/properties/: characteristics_in_space.py
core/test/general/dataTemplates/vehicles/: ships.py
core__REST_BACK/: urls.py
core__REST_BACK/apiREST/: ping.py  vehicle.py
core__REST_BACK/serializers/: serializer_vehicle_track.py
core__REST_BACK/test/: rest.py
core__REST_FRONT_USER/: urls.py
core__REST_FRONT_USER/apiREST/: __init__.py  ping.py
